# rk_opt

./: .gitignore  setup.cfg  setup.py
src/: helper_function.py  main.py  newton_raphson.py  simplex_method.py
tests/: test_case1.csv
