[metadata]
# replace with your username:
name = rk_opt_rkumar60
version = 0.0.1
author = RajKumar
author_email = raj6713631@gmail.com
description = A small optimization library build around numpy for simplex methods, linear programming
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src